2008-08-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/common.py:
	  If we have versionTupleToString, we should have the reverse here
	  too.
	* flumotion/manager/manager.py:
	  Use versionStringToTuple.
	  Since version in the config is tied to the project, not core
	  Flumotion, check if the given project actually exists, and
	  then check the component's configured version against the project
	  version.

2008-08-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/common.mk:
	  pep8-check the flumotion subdirectories, not cache and friends.

2008-08-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/project/project.py:
	  Allow getting variables from core flumotion, to avoid having
	  to special-case code everywhere.

2008-08-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/common.mk:
	  set FLU_PROJECT_PATH when checking registry.

2008-08-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* misc/flu.unstable.stable.modules:
	* misc/flu.unstable.unstable.modules:
	  Update the others too.
	  Might consider putting glib/gtk+/pygtk in unstable.unstable.

2008-08-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* misc/flu.stable.stable.modules:
	  Update.

2008-08-01  Johan Dahlin  <johan@flumotion.com>

	* Makefile.am:
	Remove trailing :
	* common/common.mk:
	Also run it on all files in the sourcedir, in case
	they are not the same

2008-08-01  Johan Dahlin  <johan@flumotion.com>

	* Makefile.am:
	* common/common.mk:
	Add check-local-pep8 which runs the pep8.py script
	on all python files in the tree
	* misc/pep8.py:
	Return a non-zero exit code if there were any errors
	found

2008-08-01  Johan Dahlin  <johan@flumotion.com>

	* *.py: make flumotion pep-8 clean, try two
	- whitespace only changes were accidentially not
	  included
	- installed.py/uninstalled.py that were generated
	  are now updated
	- cortado_location.py is pep8 clean now aswell.
